NetBSD Problem Report #53357

From Manuel.Bouyer@lip6.fr  Mon Jun 11 19:32:05 2018
Return-Path: <Manuel.Bouyer@lip6.fr>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 85D777A158
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 11 Jun 2018 19:32:05 +0000 (UTC)
Message-Id: <20180611193200.3A5F1A93B@armandeche.soc.lip6.fr>
Date: Mon, 11 Jun 2018 21:32:00 +0200 (MEST)
From: Manuel.Bouyer@lip6.fr
Reply-To: Manuel.Bouyer@lip6.fr
To: gnats-bugs@NetBSD.org
Subject: netbsd-8+bridge panic on shutdown
X-Send-Pr-Version: 3.95

>Number:         53357
>Category:       kern
>Synopsis:       netbsd-8+bridge panic on shutdown
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jun 11 19:35:00 +0000 2018
>Closed-Date:    Wed Jun 13 02:03:16 +0000 2018
>Last-Modified:  Wed Jun 13 02:03:16 +0000 2018
>Originator:     Manuel Bouyer
>Release:        NetBSD 8.0_RC1 as of today
>Organization:
>Environment:
System: NetBSD 8.0_RC1 NetBSD 8.0_RC1 (ADMIN_DOM0) amd64
Architecture: x86_64
Machine: amd64
>Description:
	This is a server with lots of bridges on top of vlans.
	At shutdown I reliably get:
reboot: rebooted by root^M
syncing disks... 11 11 done
cd0: detached
atapibus0: detached
com1: detached
igphy1: detached
wm1: detached
igphy0: detached
Mutex error: mutex_vector_enter,552: locking against myself

lock address : 0xffffa00002b70690
current cpu  :                  0
current lwp  : 0xffffa00004853160
owner field  : 0xffffa00004853160 wait/spin:                0/0

Skipping crash dump on recursive panic
panic: lock error: Mutex: mutex_vector_enter,552: locking against myself: lock 0xffffa00002b70690 cpu 0 lwp 0xffffa00004853160
fatal breakpoint trap in supervisor mode
trap type 1 code 0 rip 0xffffffff80205c75 cs 0xe030 rflags 0x246 cr2 0x7f11fcc9d2cd ilevel 0 rsp 0xffffa0004e7dd9d0 curlwp 0xffffa00004853160 pid 8099.1 lowest kstack 0xffffa0004e7d92c0
Stopped in pid 8099.1 (reboot) at       netbsd:breakpoint+0x5:  leave
db> tr
breakpoint() at netbsd:breakpoint+0x5
vpanic() at netbsd:vpanic+0x140
snprintf() at netbsd:snprintf
lockdebug_abort() at netbsd:lockdebug_abort+0x6e
mutex_vector_enter() at netbsd:mutex_vector_enter+0x19a
ifpromisc() at netbsd:ifpromisc+0x19
bridge_ioctl_del() at netbsd:bridge_ioctl_del+0xb7
bridge_ifdetach() at netbsd:bridge_ifdetach+0x5d
ether_ifdetach() at netbsd:ether_ifdetach+0x26
vlan_unconfig_locked() at netbsd:vlan_unconfig_locked+0xd6
vlan_ifdetach() at netbsd:vlan_ifdetach+0x18c
ether_ifdetach() at netbsd:ether_ifdetach+0xc0
wm_detach() at netbsd:wm_detach+0xb9
config_detach() at netbsd:config_detach+0x10b
config_detach_all() at netbsd:config_detach_all+0x97
cpu_reboot() at netbsd:cpu_reboot+0x181
sys_reboot() at netbsd:sys_reboot+0x63
syscall() at netbsd:syscall+0x9c
--- syscall (number 208) ---
>How-To-Repeat:
	reboot a system with bridges on vlan
>Fix:
	unknown

>Release-Note:

>Audit-Trail:
From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53357 CVS commit: src/sys/net
Date: Tue, 12 Jun 2018 04:20:36 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Tue Jun 12 04:20:36 UTC 2018

 Modified Files:
 	src/sys/net: if_vlan.c

 Log Message:
 vlan: call ether_ifdetach without IFNET_LOCK

 Fix PR kern/53357


 To generate a diff of this commit:
 cvs rdiff -u -r1.125 -r1.126 src/sys/net/if_vlan.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53357 CVS commit: src/tests/net/if_vlan
Date: Tue, 12 Jun 2018 04:21:22 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Tue Jun 12 04:21:22 UTC 2018

 Modified Files:
 	src/tests/net/if_vlan: t_vlan.sh

 Log Message:
 Add tests of vlan with bridge

 The tests trigger a panic reported in PR kern/53357.


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/tests/net/if_vlan/t_vlan.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Tue, 12 Jun 2018 04:33:52 +0000
State-Changed-Why:
Fixed in -current.  Could you try if_vlan.c v1.126 ?


From: Manuel Bouyer <manuel.bouyer@lip6.fr>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org,
        ozaki-r@NetBSD.org
Subject: Re: kern/53357 (netbsd-8+bridge panic on shutdown)
Date: Tue, 12 Jun 2018 12:59:42 +0200

 On Tue, Jun 12, 2018 at 04:33:52AM +0000, ozaki-r@NetBSD.org wrote:
 > Synopsis: netbsd-8+bridge panic on shutdown
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: ozaki-r@NetBSD.org
 > State-Changed-When: Tue, 12 Jun 2018 04:33:52 +0000
 > State-Changed-Why:
 > Fixed in -current.  Could you try if_vlan.c v1.126 ?

 I pulled up 1.126 to my netbsd-8 tree, and indeed this fixes the problem.
 Thanks !
 Please request a pullup to netbsd-8 :)

 -- 
 Manuel Bouyer, LIP6, Universite Paris VI.           Manuel.Bouyer@lip6.fr
      NetBSD: 26 ans d'experience feront toujours la difference
 --

From: Ryota Ozaki <ozaki-r@netbsd.org>
To: manuel.bouyer@lip6.fr
Cc: "gnats-bugs@NetBSD.org" <gnats-bugs@netbsd.org>, kern-bug-people@netbsd.org, 
	netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Subject: Re: kern/53357 (netbsd-8+bridge panic on shutdown)
Date: Tue, 12 Jun 2018 23:32:23 +0900

 On Tue, Jun 12, 2018 at 7:59 PM Manuel Bouyer <manuel.bouyer@lip6.fr> wrote:
 >
 > On Tue, Jun 12, 2018 at 04:33:52AM +0000, ozaki-r@NetBSD.org wrote:
 > > Synopsis: netbsd-8+bridge panic on shutdown
 > >
 > > State-Changed-From-To: open->feedback
 > > State-Changed-By: ozaki-r@NetBSD.org
 > > State-Changed-When: Tue, 12 Jun 2018 04:33:52 +0000
 > > State-Changed-Why:
 > > Fixed in -current.  Could you try if_vlan.c v1.126 ?
 >
 > I pulled up 1.126 to my netbsd-8 tree, and indeed this fixes the problem.
 > Thanks !
 > Please request a pullup to netbsd-8 :)

 Thank you for the confirmation!  I've sent a pull-up request for the fix.

   ozaki-r

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53357 CVS commit: [netbsd-8] src
Date: Tue, 12 Jun 2018 16:34:04 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Jun 12 16:34:04 UTC 2018

 Modified Files:
 	src/sys/net [netbsd-8]: if_vlan.c
 	src/tests/net/if_vlan [netbsd-8]: t_vlan.sh

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #876):
 	sys/net/if_vlan.c: 1.126
 	tests/net/if_vlan/t_vlan.sh: 1.9
 vlan: call ether_ifdetach without IFNET_LOCK
 Fix PR kern/53357
 --
 Add tests of vlan with bridge
 The tests trigger a panic reported in PR kern/53357.


 To generate a diff of this commit:
 cvs rdiff -u -r1.97.2.13 -r1.97.2.14 src/sys/net/if_vlan.c
 cvs rdiff -u -r1.1.8.2 -r1.1.8.3 src/tests/net/if_vlan/t_vlan.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Wed, 13 Jun 2018 02:03:16 +0000
State-Changed-Why:
Fix confirmed and pulled up (pullup-8 #876).


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.