vlan: call ether_ifdetach without IFNET_LOCK

Fix PR kern/53357